--- a/01-gallery.html
+++ b/01-gallery.html
@@ -15,5 +15,11 @@
     <ul class="gallery"></ul>
 
     <script src="js/01-gallery.js" type="module"></script>
+    <!-- <script
+      src="https://cdnjs.cloudflare.com/ajax/libs/basicLightbox/5.0.4/basicLightbox.min.js"
+      integrity="sha512-ycqisnM5/8n5gDxYe0MTYoW+5DDuupgGdbdsJ9zcu66ZszaKh4JGsmjzyi7jJY4AjynXc43DOba/m+yVGmv+wQ=="
+      crossorigin="anonymous"
+      referrerpolicy="no-referrer"
+    ></script> -->
   </body>
 </html>
