--- a/src/index.html
+++ b/src/index.html
@@ -10,5 +10,8 @@
   <body>
     <!-- ❗️❗️❗️ Add partials like so for every page -->
     <include src="./partials/example.html"></include>
+    <include src="./01-gallery.html"></include>
+    <include src="./02-video.html"></include>
+    <include src="./03-feedback.html"></include>
   </body>
 </html>
